fixes on persisting card positions
