# app/Http/Requests/CardShiftRequest.php
@@ -2,7 +2,7 @@
 
 namespace App\Http\Requests;
 
-class StoreCardRequest extends APIFormRequest
+class CardShiftRequest extends APIFormRequest
 {
     /**
      * Get the validation rules that apply to the request.
@@ -12,9 +12,7 @@ class StoreCardRequest extends APIFormRequest
     public function rules(): array
     {
         return [
-            'title' => 'required|string|max:255',
-            'description' => 'required|string|max:255',
-            'column_id' => 'required|integer|exists:columns,id',
+            'new_position' => 'required|integer|min:0',
         ];
     }
 }
