# app/Models/Column.php
@@ -43,6 +43,6 @@ class Column extends Model
 
     public function cards(): HasMany
     {
-        return $this->hasMany(Card::class);
+        return $this->hasMany(Card::class)->orderBy('position');
     }
 }
